# stocks-tracker

./: README.md  docker-compose.yml  pyproject.toml
csv_files/ticker=M2/: M2.csv
market_tracker/: Dockerfile  api.py  currencies.yaml  data.py  query_logic.py  scraper.py  tickers.yaml
nginx/: nginx.conf
parquet_files/ticker=AAPL/: data_19000101_20241213.parquet  data_19000101_20241229.parquet
parquet_files/ticker=ABBV/: data_19000101_20241213.parquet  data_19000101_20241229.parquet
parquet_files/ticker=AMC/: data_19000101_20241213.parquet  data_19000101_20241229.parquet
parquet_files/ticker=AMD/: data_19000101_20241213.parquet  data_19000101_20241229.parquet
parquet_files/ticker=AMZN/: data_19000101_20241213.parquet  data_19000101_20241229.parquet
parquet_files/ticker=AZN/: data_19000101_20241213.parquet  data_19000101_20241229.parquet
parquet_files/ticker=BMY/: data_19000101_20241213.parquet  data_19000101_20241229.parquet
parquet_files/ticker=BTC-USD/: data_19000101_20241213.parquet  data_19000101_20241229.parquet
parquet_files/ticker=CVS/: data_19000101_20241213.parquet  data_19000101_20241229.parquet
parquet_files/ticker=DIS/: data_19000101_20241213.parquet  data_19000101_20241229.parquet
parquet_files/ticker=GOOG/: data_19000101_20241213.parquet  data_19000101_20241229.parquet
parquet_files/ticker=JNJ/: data_19000101_20241213.parquet  data_19000101_20241229.parquet
parquet_files/ticker=JPM/: data_19000101_20241213.parquet  data_19000101_20241229.parquet
streamlit_app/: Dockerfile  requirements.txt  streamlit_app.py
(+51 files in other folders)
